# fastapi-student-management-system

./: README.md  Students.json  pyproject.toml
src/students/: main.py
