[project]
name = "students"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn>=0.34.0,<0.35.0",
    "pydantic[email]>=2.11.0,<3.0.0"
]

[tool.poetry]
packages = [{ include = "students", from = "src" }]

[tool.poetry.scripts]
st = "students.main:start"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
